added a few tests - still need to figure out why LL/RR layouts arent working